# adventofcode

./: .bazelignore  .bazelrc  .clang-format  .gitignore  BUILD  WORKSPACE  day1.go  day1_test.go  go.mod  go.sum  readme.md
2017/: BUILD.bazel  helper.go  readme.md
2017/day1/: BUILD.bazel  day1.go
2017/day2/: BUILD.bazel
2017/day3/: BUILD.bazel  day3.go
2017/day4/: BUILD.bazel  day4.go
2017/day5/: BUILD.bazel  day5_test.go
2017/day6/: BUILD.bazel  day6.go
2017/day7/: BUILD.bazel  day7.go  day7_test.go
2018/day1/: BUILD  day1.go  day1_test.go
2018/day2/: BUILD  day2.go  day2_test.go
2018/day3/: BUILD  day3.go  day3_test.go
2018/day4/: BUILD  day4.go  day4_test.go
2018/day5/: BUILD  day5.go  day5_test.go
2019/day1/: BUILD.bazel  main.go  main_test.go
2019/day10/: BUILD.bazel  main.go  main_test.go
2019/day11/: BUILD.bazel  main.go
2019/day12/: BUILD.bazel  main.go  main_test.go
2019/day13/: BUILD.bazel  main.go
2019/day14/: BUILD.bazel  main.go  main_test.go
2019/day16/: BUILD  day16.cc  day16.h  day16_test.cc  main.cc
2019/day17/: BUILD.bazel  main.go
2019/day2/: BUILD.bazel  main.go  main_test.go
2019/day3/: BUILD.bazel  main.go  main_test.go
2019/day3b/: BUILD.bazel  main.go  main_test.go
2019/day4/: BUILD.bazel  main.go  main_test.go
2019/day4b/: BUILD.bazel  main.go  main_test.go
2019/day5/: BUILD.bazel  main.go
2019/day5b/: BUILD.bazel  main.go
2019/day6/: BUILD.bazel  main.go
2019/day7/: BUILD.bazel  intcode.go  main.go  main_test.go
2019/day7b/: BUILD.bazel  intcode.go  main.go  main_test.go
2019/day8/: BUILD.bazel  main.go
2019/day9/: BUILD.bazel  intcode.go  main.go
2019/intcode/: BUILD.bazel  intcode.go
2020/day1/: BUILD  day1.cc  day1.h  day1_test.cc  main.cc
2020/day10/: BUILD  day10.cc  day10.h  day10_test.cc  main.cc
2020/day11/: BUILD  day11.cc  day11.h  day11_test.cc  main.cc
2020/day12/: BUILD  day12.cc  day12.h  day12_test.cc  main.cc
2020/day13/: BUILD  day13.cc  day13.h  day13_test.cc  main.cc
2020/day14/: BUILD  day14.cc  day14.h  day14_test.cc  main.cc
2020/day15/: BUILD  day15.cc  day15.h  day15_test.cc  main.cc
2020/day16/: BUILD  day16.cc  day16.h  day16_test.cc  main.cc
2020/day17/: BUILD  day17.cc  day17.h  day17_test.cc  main.cc
2020/day18/: BUILD  day18.cc  day18.h  day18_test.cc  main.cc
2020/day19/: BUILD  day19.cc  day19.h  day19_test.cc  main.cc
2020/day2/: BUILD  day2.cc  day2.h  day2_test.cc  main.cc
2020/day3/: BUILD  day3.cc  day3.h  (+2 more)
day1/: day1_test.go
day2/: day2.go  day2_test.go
day3/: day3_test.go
day4/: day4_test.go
day5/: day5.go
day6/: day6_test.go
gohelpers/: BUILD  helpers.go  priorityqueue.go
helpers/: BUILD  helpers.cc  helpers.h
templates/: cpp.py  go.py  template.py
(+279 files in other folders)
