load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["day6.go"],
    importpath = "github.com/reusing-code/adventofcode/2017/day6",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["day6_test.go"],
    embed = [":go_default_library"],
)
