load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/reusing-code/adventofcode/2019/day5b",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "day5b",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
