load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/reusing-code/adventofcode/2019/day7b",
    visibility = ["//visibility:private"],
    deps = ["//2019/intcode:go_default_library"],
)

go_binary(
    name = "day7b",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
)
